--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "lint": "eslint -c .eslintconfig.js src",
     "release": "standard-version && git push --follow-tags origin && npm publish",
-    "release-major": "standard-version --release-as major && git push --follow-tags origin && npm publish",
-    "release-minor": "standard-version --release-as minor && git push --follow-tags origin && npm publish"
+    "release-major": "standard-version --release-as major && git push --follow-tags origin main && npm publish --access public",
+    "release-minor": "standard-version --release-as minor && git push --follow-tags origin main && npm publish --access public"
   }
 }
